# terminal-video-chat

./: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
anteros/: Cargo.toml
anteros/src/: main.rs
crates/config/src/: lib.rs
crates/media/src/: lib.rs
crates/network/src/: lib.rs
crates/protocol/src/: lib.rs
frontends/tui/src/: lib.rs
include/: term_output.hpp
src/: main.cpp
